Fixed spacing on blog header

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -56,10 +56,12 @@ header {
 
 .search-wrap{margin-top:121px;}
 .search-wrap.case-studies{margin-top: 0;}
+.search-wrap.blog{margin-top: 0;}
 
 @media (max-width: 768px) {
 	.search-wrap{margin-top:0px;}
 	.search-wrap.case-studies{margin-top: 20px;}
+	.search-wrap.blog{margin-top: 20px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
